2007-12-26  Sebastien Pouliot  <sebastien@ximian.com>

	* AbstractTypesShouldNotHavePublicConstructorsTest.cs: New. Unit tests
	* AvoidEmptyInterfaceTest.cs: New. Unit tests
	* AvoidPropertiesWithoutGetAccessorTest.cs: New. Unit tests
	* EnumsShouldDefineAZeroValueTest.cs: New. Unit tests
	* FlagsShouldNotDefineAZeroValueTest.cs: New. Unit tests
	* TypesShouldBeInsideNamespacesTest.cs: New. Unit tests
	* UsingCloneWithoutImplementingICloneableTest.cs: Add test cases 
	for inheritance.
	* Test.Rules.Design.mdp: Add new unit test to MonoDevelop project 
	file.

2007-11-22  Sebastien Pouliot  <sebastien@ximian.com>

	* UsingCloneWithoutImplementingICloneableTest.cs: Add a test case
	where the Clone method return the type itself (not System.Object) 
	since this is also a good candidate for ICloneable

2007-10-08  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Add missing file

2007-10-07  Sebastien Pouliot  <sebastien@ximian.com>

	* DontDeclareProtectedFieldsInSealedClassTest.cs: Unit tests (Nidhi 
	Rawal, GSoC 2007)
	* UsingCloneWithoutImplementingICloneableTest.cs: Unit tests (Nidhi 
	Rawal, GSoC 2007)
	* Test.Rules.Design.mdp: New. Project file for MonoDevelop.