@@ -22,6 +22,7 @@
     <File name="EnumsShouldDefineAZeroValueTest.cs" subtype="Code" buildaction="Compile" />
     <File name="FlagsShouldNotDefineAZeroValueTest.cs" subtype="Code" buildaction="Compile" />
     <File name="TypesShouldBeInsideNamespacesTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="MainShouldNotBePublicTest.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Assembly" localcopy="True" refto="../../../../lib/Mono.Cecil.dll" />
