@@ -1,3 +1,9 @@
+2007-12-28  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* MainShouldNotBePublicTest.cs: New. Unit tests from Daniel Abramov.
+	* Test.Rules.Design.mdp: Add new unit test to MonoDevelop project 
+	file.
+
 2007-12-26  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* AbstractTypesShouldNotHavePublicConstructorsTest.cs: New. Unit tests
